--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "bootstrap": "^5.0.2",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "express-flash": "^0.0.2",
+        "express-session": "^1.17.2",
         "joi": "^17.4.1",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "pg": "^8.7.1"
     },
     "devDependencies": {
